[package]
name = "rs115"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rust-crypto = "0.2.36"
unescape = "0.1.0"
clap = {version = "2.33", features = ["yaml"]}
rand = "0.8"
