[package]
name = "rs115"
version = "0.10.0"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rust-crypto = "0.2.36"
unescape = "0.1.0"
clap = {version = "2.33", features = ["yaml"]}
rand = "0.8"
